Fix alignment and border issues on iOS.
Use a flexbox housing a span.

--- a/app/common/styles/components/button.scss
+++ b/app/common/styles/components/button.scss
@@ -35,9 +35,7 @@
 	
 	.dh-btn {
 		
-		display: inline-flex;
-		
-		vertical-align: bottom;
+		display: flex;
 		
 		box-sizing: border-box;
 		
